--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
   <div id="splashPage">
   </div>
-  <div class="container-fluid" style="opacity: 0">
+  <div class="container" style="opacity: 0">
+<!--  <div class="container">-->
     <div class="containerBrands">
       <header>
         <p class="logo">Style Mixer</p>
@@ -31,7 +32,7 @@
       </header>
       <div class="clients">
         <ul class="mainMenu">
-          <li>ABOUT</li>
+          <li id="openMenu">ABOUT</li>
           <li>FILTER</li>
         </ul>
         <ul class="filter">
@@ -48,8 +49,74 @@
     <div class="containerGallery">
       <ul class="grid effect-2" id="grid">
       </ul>
+    </div>
 </div>
-</div>
+<div class="container-fluid">
+        <header>
+            <p class="logo">Style Mixer</p>
+        </header>
+        <div class="close">
+            <span>Close</span>
+        </div>
+        <div class="menuTitle">
+            <h1>Style Mixer create</h1>
+        </div>
+        <div class="col-left">
+        </div>
+        <div class="col-right">
+            <h5>crative studio</h5>
+        </div>
+        <div class="row">
+            <div class="col-left menuBlockTitle">
+                <h6>About</h6>
+            </div>
+            <div class="col-right menuText">
+                <p>Style Mixer is a creative studio founded by Mario Milizia, specializing in the luxury and fashion industry. Our consulting ranges from graphic design to creative image coordination. Mario Milizia opened the studio in 2003 after ten years as a partner of Ettore Sottsass, operating in the field of visual communication for design companies like Alessi, Vitra, Siemens, Corian®, cultural venues like the Venice Biennale and publishing houses, including Rizzoli and Skira. Working in close contact with clients we develop projects focusing on product and point-of-sale communication, institutional and corporate identity.Our clients include: Giorgio Armani, Cartier, De Rigo, Escada, Etro, Givenchy,Luxottica, Patek Philippe, Safilo, Tod’s, Valentino, Versace, Ermenegildo Zegna.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-left menuBlockTitle">
+                <h6>Clients</h6>
+            </div>
+            <div class="col-right menuText">
+                <ul>
+                    <li>Giorgio Armani</li>
+                    <li>Cartier</li>
+                    <li>De Rigo</li>
+                    <li>Escada</li>
+                    <li>Etro</li>
+                    <li>Givenchy</li>
+                    <li>Luxottica</li>
+                    <li>Patek Philippe</li>
+                    <li>Safilo</li>
+                    <li>Tod's</li>
+                    <li>Valentino</li>
+                    <li>Versace</li>
+                    <li>Ermenegildo Zegna</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-left menuBlockTitle">
+                <h6>Contacts</h6>
+            </div>
+            <div class="col-right menuText">
+                <ul>
+                    <li>Mail: 
+                        <a href="mailto:info@stylemixer.com">info@stylemixer.com</a></li>
+                    <li>Tel: +39 02 29 00 00 24</li>
+                    <li>Address: via Raimondo Franchetti, 4 20124 – Milano</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row" id="last">
+           <div class="col-left"></div>
+            <div class="col-right menuText">
+                <h7>Powered by 
+                <a href="www.mauriziolucci.com" target="_blank">Maurizio Lucci</a> & <a href="www.mauriziolucci.com" target="_blank">Riccardo Oliva</a></h7>
+            </div>
+        </div>
+    </div>
 
 <script src="js/jquery-2.2.0.min.js"></script>
 <script src="js/modernizr.custom.js"></script>
