--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 <div class="container-fluid">
         <header>
             <p class="logo">Style Mixer</p>
+            <div class="close">
+                <span>Close</span>
+            </div>
         </header>
-        <div class="close">
-            <span>Close</span>
-        </div>
         <div class="menuTitle">
             <h1>Style Mixer create</h1>
         </div>
@@ -66,7 +66,7 @@
                 <h6>About</h6>
             </div>
             <div class="col-right menuText">
-                <p>Style Mixer is a creative studio founded by Mario Milizia, specializing in the luxury and fashion industry. Our consulting ranges from graphic design to creative image coordination. Mario Milizia opened the studio in 2003 after ten years as a partner of Ettore Sottsass, operating in the field of visual communication for design companies like Alessi, Vitra, Siemens, Corian®, cultural venues like the Venice Biennale and publishing houses, including Rizzoli and Skira. Working in close contact with clients we develop projects focusing on product and point-of-sale communication, institutional and corporate identity. Our clients include: Giorgio Armani, Cartier, De Rigo, Escada, Etro, Givenchy, Luxottica, Patek Philippe, Safilo, Tod’s, Valentino, Versace, Ermenegildo Zegna.</p>
+                <p>Style Mixer is a creative studio founded by Mario Milizia, specializing in the luxury and fashion industry. Our consulting ranges from graphic design to creative image coordination. Mario Milizia opened the studio in 2003 after ten years as a partner of Ettore Sottsass, operating in the field of visual communication for design companies like Alessi, Vitra, Siemens, Corian®, cultural venues like the Venice Biennale and publishing houses, including Rizzoli and Skira. Working in close contact with clients we develop projects focusing on product and point-of-sale communication, institutional and corporate identity.</p>
             </div>
         </div>
         <div class="row">
@@ -97,7 +97,7 @@
             </div>
             <div class="col-right menuText">
                 <ul>
-                    <li>Mail: 
+                    <li>Mail:
                         <a href="mailto:info@stylemixer.com">info@stylemixer.com</a></li>
                     <li>Tel: +39 02 29 00 00 24</li>
                     <li>Address: via Raimondo Franchetti, 4 20124 – Milano</li>
@@ -107,8 +107,8 @@
         <div class="row" id="last">
            <div class="col-left"></div>
             <div class="col-right menuText">
-                <h7>Powered by 
-                <a href="www.mauriziolucci.com" target="_blank">Maurizio Lucci</a> & <a href="www.mauriziolucci.com" target="_blank">Riccardo Oliva</a></h7>
+                <h7>Powered by
+                <a href="www.mauriziolucci.com" target="_blank">Maurizio Lucci</a> & <a href="httwww.mauriziolucci.com" target="_blank">Riccardo Oliva</a></h7>
             </div>
         </div>
     </div>
